tests/errors/syn_if5.java
public class syn_if5 {
public static void main(String[] args){
if ( true ) 
}
}
}